Arrumada classe estado

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="tomasulo.js"></script>
+<script src="estado.js" type="module"></script>
+<script src="tomasulo.js" type="module"></script>
 </body>
 </html>
