Atualiza para tirar a unidade de DIV e adiciona latencias de load/store

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
                     <td><input type="number" min="1" value="1" name="ciclosInt" id="ciclosInt" /></td>
                 </p>
                 <p>
+                    <td>Load</td>
+                    <td><input type="number" min="1" value="1" name="ciclosLoad" id="ciclosLoad" /></td>
+                </p>
+                <p>
+                    <td>Store</td>
+                    <td><input type="number" min="1" value="1" name="ciclosStore" id="ciclosStore" /></td>
+                </p>
+                <p>
                     <td>FP Add</td>
                     <td><input type="number" min="1" value="1" name="ciclosFPAdd" id="ciclosFPAdd" /></td>
                 </p>
@@ -75,10 +83,6 @@
                 <p>
                     <td>FP Mult</td>
                     <td><input type="number" min="1" value="2" name="fuFPMul" id="fuFPMul" /></td>
-                </p>
-                <p>
-                    <td>FP Div</td>
-                    <td><input type="number" min="1" value="1" name="fuFPDiv" id="fuFPDiv" /></td>
                 </p>
 
                 <br />
