Adiciona mais exemplos e os registradores de inteiros também são salvos

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                     <option value="04">Exemplo 04</option>
                     <option value="05">Exemplo 05</option>
                     <option value="06">Exemplo 06</option>
+                    <option value="07">Exemplo 07</option>
+                    <option value="08">Exemplo 08</option>
+                    <option value="09">Exemplo 09</option>
+                    <option value="10">Exemplo 10</option>
                 </select>
                 <button type="submit" name="carregaExemplo" id="carregaExemplo">Carregar</button>
             </p>
