Ajeitadinhas para entrega

--- a/ajuda.html
+++ b/ajuda.html
@@ -13,9 +13,10 @@
         <h2>Help</h2>
     </header>
 
-    <main class="text-center">
+    <main>
         <p>
-            <h3>Passo-a-passo: </h3>
+            <h3 class="text-center">Passo-a-passo: </h3>
+            <br>
             <ol>
                 <li>Escolher a quantidade de instuções e confirmar</li>
                 <li>Preencher a tabela de instruções de acordo com o padrão MIPS, usando R para registradores inteiros e F para registradores de ponto flutuante </li>
@@ -31,6 +32,25 @@
                 <li>Para carregar um exemplo, basta selecioná-lo no combo box no topo da página e clicar em "Carregar".</li>
             </ul>
         </p>
+        <br>
+        <p>
+            <h3 class="text-center">Formato Instruções</h3>
+            <br>
+            <ul>
+                <li><b>LD</b>: REGISTRADOR, CONSTANTE, REGISTRADOR</li>
+                <li><b>SD</b>: REGISTRADOR, CONSTANTE, REGISTRADOR</li>
+                <li><b>ADD</b>: REGISTRADOR, REGISTRADOR, REGISTRADOR</li>
+                <li><b>DADDUI</b>: REGISTRADOR, REGISTRADOR, CONSTANTE</li>
+                <li><b>BEQ</b>: REGISTRADOR, REGISTRADOR, RÓTULO</li>
+                <li><b>BNEZ</b>: REGISTRADOR, RÓTULO</li>
+                <li><b>ADDD</b>: REGISTRADOR, REGISTRADOR, REGISTRADOR</li>
+                <li><b>SUBD</b>: REGISTRADOR, REGISTRADOR, REGISTRADOR</li>
+                <li><b>MULTD</b>: REGISTRADOR, REGISTRADOR, REGISTRADOR</li>
+                <li><b>DIVD</b>: REGISTRADOR, REGISTRADOR, REGISTRADOR</li>
+            <ul>
+        </p>
+        <br>
+
         
         
     </main>
