--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="pt-Br">
 <head>
     <meta charset="utf-8">
-    <title>Scoreboarding</title>
+    <title>Tomasulo Simulator</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
 </head>
 <body>
     <header class="jumbotron text-center">
-        <h1>Scoreboarding</h1>
+        <h1>Tomasulo Simulator</h1>
     </header>
 
     <div class="row mx-5">
